--- a/public/css/home.css
+++ b/public/css/home.css
@@ -14,3 +14,19 @@
 {
     background-color: antiquewhite;
 }
+.vote
+{
+    padding: 2px 20px;
+}
+.votes
+{
+    font-weight: bold;
+    font-size: 25px;
+    text-align: center;
+}
+
+.answer
+{
+    font-size: 20px;
+    font-weight: bold;
+}
