--- a/public/css/home.css
+++ b/public/css/home.css
@@ -22,11 +22,18 @@
 {
     font-weight: bold;
     font-size: 20px;
-    text-align: center;
+    text-align: right;
 }
 
 .answer
 {
     font-size: 20px;
     font-weight: bold;
+}
+hr{
+
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 2px;
 }
