--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,99 @@
+body
+{
+    background: gainsboro;
+}
+.my-nav{
+    background: #4395f4;
+    border-radius: 0;
+
+}
+
+.my-nav .my-menu li a {
+    color: white;
+    font-family: 'Ropa Sans', sans-serif;
+    font-size: 15px;
+}
+
+.my-nav .my-menu li a:hover,a:focus{
+    background: #317cd3;
+    color: white;
+    font-size: 110%;
+    border-radius: 10px;
+}
+
+.my-nav .my-menu .dropdown .dropdown-menu{
+    background: #4395f4;
+    color: white;
+   
+}
+
+.my-nav .my-menu .dropdown li a:hover{
+    background: #317cd3;
+    border-radius: 10px;
+    color:white;
+}
+
+.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
+    color: White;
+    background-color: #317cd3;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+     background-color: white;
+}
+.navbar-default .navbar-brand
+{
+    font-size: 15px;
+    color:white;
+}
+
+.navbar-default .navbar-brand:hover
+{
+    border-radius: 10px;
+    color:white;
+}
+
+@media (max-width: 767px)
+{
+    .navbar-default .navbar-nav .open .dropdown-menu>li>a {
+        color: white;
+    }
+
+    .navbar-default .navbar-nav .open .dropdown-menu>li>a:hover{
+        color: White;
+         background-color: #317cd3;
+    }
+}
+@media (max-width: 850px)  {
+    .navbar-collapse.collapse {
+        display: none !important;
+    }
+    .navbar-collapse.collapse.in {
+        display: block !important;
+    }
+    .navbar-header .collapse, .navbar-toggle {
+        display:block !important;
+    }
+    .navbar-header {
+        float:none;
+    }
+}
+
+@media (max-width: 850px)  {
+    .navbar-collapse.collapse {
+        display: none !important;
+    }
+    .navbar-collapse.collapse.in {
+        display: block !important;
+    }
+    .navbar-header .collapse, .navbar-toggle {
+        display:block !important;
+    }
+    .navbar-header {
+        float:none;
+    }
+}
+
 .tag
 {
     background: lightblue;
@@ -12,7 +108,21 @@
 }
 .panel-body
 {
-    background-color: antiquewhite;
+    background-color: rgb(106, 170, 243);
+    color: white;
+}
+.panel-body a
+{
+    color: black;
+    font-size: 15px;
+}
+.question
+{
+    font-size: 25px;
+}
+#heading
+{
+    font-size: 20px;
 }
 .vote
 {
@@ -29,6 +139,8 @@
 {
     font-size: 20px;
     font-weight: bold;
+    text-align: center;
+
 }
 hr{
 
@@ -36,4 +148,19 @@ hr{
     padding: 0;
     width: 100%;
     height: 2px;
+}
+
+.navigation
+{
+    color: white;
+    background: #4395f4;    
+    padding: 10px;
+    width: 20px;
+}
+
+.navigation:hover
+{
+    background: #317cd3;    
+    text-decoration: none;
+    color: white;
 }
